Fixed header size and section layout bugs

--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -1,6 +1,6 @@
 /* Header section style */
 header {
-    height: 25%;
+    height: 30em;
 
     background-color: #1F2937;
     color: #F9FAF8;
