--- a/styles/main.css
+++ b/styles/main.css
@@ -238,7 +238,7 @@ blockquote::before {
     color: #1F2937;
 }
 
-section {
+#projects section {
     display: flex;
     margin: 40px 15vw;
 }
